# funcexpr

./: .gitignore  funcexpr.py  pyproject.toml  readme.md
funcexpr/: __init__.py  _typing.py  funcexpr.py
tests/: test_funcexpr.py
