[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funcexpr"
version = "0.1.0"
description = "A lightweight wrapper around numexpr that adds support for registered callables and automatic type normalization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numexpr",
    "numpy",
]
keywords = ["numexpr", "numpy", "expression", "ast", "callable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/hiroshiasayadev-prog/funcexpr"
Repository = "https://github.com/hiroshiasayadev-prog/funcexpr"
Issues = "https://github.com/hiroshiasayadev-prog/funcexpr/issues"